HTML__ONLY__END
ONLY_HTML

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
           </div>
         </li>
         <li class="home__feed-contents">
-          <img src="images/palace__feed.png" class="feed__main-img" />
+          <a href="feedInside.html">
+            <img src="images/palace__feed.png" class="feed__main-img" />
+          </a>
         </li>
         <li class="home__feed-option">
           <div class="feed-option-box">
