--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <img src="images/marshmello.png" class="feed-header-avatar" />
               <div class="home__feed-profile">
                 <span class="feed__name">MarshMello</span>
-                <span class="feed__time-staml">5 min</span>
+                <span class="feed__time-stamp">5 min</span>
               </div>
             </div>
             <div class="home__feed-column">
