Correct the Spelling
Correct the Spelling

--- a/feedInside.html
+++ b/feedInside.html
@@ -25,7 +25,7 @@
               />
               <div class="home__feed-profile">
                 <span class="feed__name">MarshMello</span>
-                <span class="feed__time-staml">5 min</span>
+                <span class="feed__time-stamp">5 min</span>
               </div>
             </div>
             <div class="home__feed-column">
