--- a/feedInside.html
+++ b/feedInside.html
@@ -25,7 +25,7 @@
               />
               <div class="home__feed-profile">
                 <span class="feed__name">MarshMello</span>
-                <span class="feed__time-stamp">5 min</span>
+                <span class="feed__time-staml">5 min</span>
               </div>
             </div>
             <div class="home__feed-column">
@@ -79,8 +79,28 @@
             </div>
           </div>
         </li>
-      </ul>
-      <ul class="home__feed-comments">
+        <li class="home__feed-comments-list">
+          <div class="home__feed__comments-column">
+            <img
+              src="images/marshmello.png"
+              class="feed-header-avatar fi-avatar"
+            />
+          </div>
+          <div class="home__feed__comments-column">
+            <div class="home__feed-profile fi-profile">
+              <div class="fi-profile-column">
+                <span class="feed__name fi-name">Supreme</span>
+                <span class="feed__comments-opinion">Perfect PALACE !</span>
+              </div>
+            </div>
+          </div>
+          <div class="home__feed__comments-column">
+            <div class="comments-reaction">
+              <i class="far fa-heart"></i>
+              <i class="fas fa-reply"></i>
+            </div>
+          </div>
+        </li>
         <li class="home__feed-comments-list">
           <div class="home__feed__comments-column">
             <img
